--- a/composer.json
+++ b/composer.json
@@ -5,6 +5,7 @@
         "behat/behat": "2.4.*@stable",
         "behat/mink": "1.4@stable",
         "behat/mink-extension": "*",
+        "behat/mink-selenium2-driver": "*",
         "behat/mink-goutte-driver": "*",
         "behat/symfony2-extension": "*",
 
