--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
         "behat/mink-selenium2-driver": "*",
         "behat/mink-goutte-driver": "*",
         "behat/symfony2-extension": "*",
+        "behat/common-contexts": "*",
 
         "doctrine/orm": "*",
         "doctrine/data-fixtures": "*@dev"
