--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
         "behat/mink-selenium2-driver": "*",
         "behat/mink-goutte-driver": "*",
         "behat/symfony2-extension": "*",
-        "behat/common-contexts": "*"
+        "behat/common-contexts": "*",
+        "guzzle/service": "*"
     }
 }
