--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,6 @@
         "behat/mink-selenium2-driver": "*",
         "behat/mink-goutte-driver": "*",
         "behat/symfony2-extension": "*",
-        "behat/common-contexts": "*",
-        "guzzle/service": "*"
+        "behat/common-contexts": "*"
     }
 }
