updates behat version

--- a/composer.json
+++ b/composer.json
@@ -3,8 +3,8 @@
     "description": "Metadata package which contains a standalone Behat installation.",
 
     "require-dev": {
-        "behat/behat": "2.4.*@stable",
-        "behat/mink": "1.4@stable",
+        "behat/behat": "~2.4",
+        "behat/mink": "~1.4",
         "behat/mink-extension": "*",
         "behat/mink-selenium2-driver": "*",
         "behat/mink-goutte-driver": "*",
