--- a/composer.json
+++ b/composer.json
@@ -3,17 +3,16 @@
     "description": "Metadata package which contains a standalone Behat installation.",
 
     "require-dev": {
-        "behat/behat": "~2.4",
-        "behat/mink": "~1.4",
+        "behat/behat": "^2.4",
+        "behat/mink": "^1.4",
         "behat/mink-extension": "*",
         "behat/mink-selenium2-driver": "*",
         "behat/mink-goutte-driver": "*",
         "behat/symfony2-extension": "*",
         "behat/common-contexts": "*",
+        "fabpot/goutte": "^1.0",
 
-        "guzzle/guzzle": "~3.0",
-        "guzzle/http": "~3.0",
-
-        "phpunit/phpunit": "~3.7.0"
+        "guzzle/guzzle": "^3.0",
+        "guzzle/http": "^3.0"
     }
 }
